# cxr-label-detection

./: .gitignore  README.md  pyproject.toml  run_project_in_jupyter.ipynb
configs/: chexpert_densenet121.yaml  default.yaml  exp01_imagenet_densenet121_512.yaml  exp02_imagenet_resnet50_512.yaml  exp03_xrv_chex_densenet121_512.yaml  exp04_xrv_chex_densenet121_512_crop1.yaml  exp05_xrv_chex_densenet121_512_nojitter.yaml  exp06_xrv_all_densenet121_512_crop1.yaml  exp07_xrv_resnet50_res512_all_crop1.yaml  exp08_imagenet_densenet121_meanpool.yaml  exp09_xrv_all_densenet121_meanpool_crop1.yaml  exp10_xrv_all_densenet121_224_crop1.yaml  exp11_imagenet_densenet121_224_crop1.yaml  exp12_imagenet_densenet121_512_resize_preserve_ratio.yaml  exp_224_legacy_reference.yaml  exp_asl_cosine_ema.yaml  exp_asl_cosine_ema_fold1_fast.yaml  exp_legacy_weighted_bce_plateau.yaml  exp_weighted_bce_clipped15_cosine_ema.yaml  exp_xrvnorm_asl.yaml
cxr_mil/: config.py  constants.py  data.py  io.py  losses.py  metrics.py  models.py  train_cv.py  train_steps.py  transforms.py  utils.py
cxr_mil/cli/: analyze_predictions.py  inspect_augmentations.py  train_cv.py
